added map box and optimizied routing
